# testing_repo

./: README.md
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/my_test_scripts/: testing_script
catkin_ws/devel/lib/pkgconfig/: my_test_scripts.pc
catkin_ws/devel/share/my_test_scripts/cmake/: my_test_scriptsConfig.cmake
catkin_ws/src/my_test_scripts/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
catkin_ws/src/my_test_scripts/src/: testing_script.cpp  testing_script.cpp~
